Some more behavior tree work
Now NPCs can aim!

--- a/codemp/game/CMakeLists.txt
+++ b/codemp/game/CMakeLists.txt
@@ -112,6 +112,7 @@ set(MPGameGameFiles
 	"${MPDir}/game/NPC_spawn.c"
 	"${MPDir}/game/NPC_stats.c"
 	"${MPDir}/game/NPC_utils.c"
+	"${MPDir}/game/npc_behaviortree.c"
 	"${MPDir}/game/SpeederNPC.c"
 	"${MPDir}/game/tri_coll_test.c"
 	"${MPDir}/game/w_force.c"
@@ -136,6 +137,7 @@ set(MPGameGameFiles
 	"${MPDir}/game/g_xcvar.h"
 	"${MPDir}/game/inv.h"
 	"${MPDir}/game/match.h"
+	"${MPDir}/game/npc_behaviortree.h"
 	"${MPDir}/game/npc_headers.h"
 	"${MPDir}/game/say.h"
 	"${MPDir}/game/surfaceflags.h"
